Fini footer et header por PC

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styleNAV-Footer.css">
   <link rel="stylesheet" href="css/styleIndex.css">
+  <link rel="stylesheet" href="css/styleIndexPC.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -171,11 +172,13 @@
               <div class="match">
                 <div class="equipe">
                   <img src="medias/Teams/600px-Heroic_2023.png" alt="heroic">
+                  <p>HEROIC</p>
                 </div>
                 <div class="divider">
                 </div>
                 <div class="equipe">
                   <img src="medias/Teams/600px-500_2023_allmode.png" alt="500">
+                  <p>500</p>
                 </div>
               </div>
             </div>
@@ -187,12 +190,14 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="heroic">
+                  <img src="medias/Teams/600px-Cloud9_2023_full_allmode.png" alt="C9">
+                  <p>C9</p>
                 </div>
                 <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="500">
+                  <img src="medias/Teams/600px-FORZE_Esports_2023_february_full_lightmode.png" alt="FORZE">
+                  <p>FORZE</p>
                 </div>
               </div>
             </div>
@@ -204,46 +209,14 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/Team_Spirit_2022_lightmode.png" alt="heroic">
+                  <img src="medias/Teams/Team_Spirit_2022_lightmode.png" alt="Spirit">
+                  <p>SPIRIT</p>
                 </div>
                 <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Aurora_Gaming_2023_allmode.png" alt="500">
-                </div>
-              </div>
-            </div>
-            <div class="round">
-              <div class="matchSuivant">
-                <div class="equipe">TBD</div>
-              </div>
-            </div>  
-            <div class="round">
-              <div class="match">
-                <div class="equipe">
-                  <img src="medias/Teams/600px-BIG_2020_lightmode.png" alt="heroic">
-                </div>
-                <div class="divider">
-                </div>
-                <div class="equipe">
-                  <img src="medias/Teams/600px-INation_2021_allmode.png" alt="500">
-                </div>
-              </div>
-            </div>
-            <div class="round">
-              <div class="matchSuivant">
-                <div class="equipe">TBD</div>
-              </div>
-            </div>
-            <div class="round">
-              <div class="match">
-                <div class="equipe">
-                  <img src="medias/Teams/600px-ENCE_2020_full_lightmode.png" alt="heroic">
-                </div>
-                <div class="divider">
-                </div>
-                <div class="equipe">
-                  <img src="medias/Teams/600px-Monte_2022_allmode.png" alt="500">
+                  <img src="medias/Teams/600px-Aurora_Gaming_2023_allmode.png" alt="AURORA">
+                  <p>AURORA</p>
                 </div>
               </div>
             </div>
@@ -255,12 +228,14 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="heroic">
+                  <img src="medias/Teams/600px-BIG_2020_lightmode.png" alt="BIG">
+                  <p>BIG</p>
                 </div>
                 <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/Astralis_logo.svg.png" alt="500">
+                  <img src="medias/Teams/600px-INation_2021_allmode.png" alt="iNation">
+                  <p>iNATION</p>
                 </div>
               </div>
             </div>
@@ -272,12 +247,14 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/ninjas-in-pyjamas-logo-0AD2295340-seeklogo.com.png" alt="heroic">
+                  <img src="medias/Teams/600px-ENCE_2020_full_lightmode.png" alt="ENCE">
+                  <p>ENCE</p>
                 </div>
                 <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-Eternal_Fire_2022_allmode.png" alt="500">
+                  <img src="medias/Teams/600px-Monte_2022_allmode.png" alt="MONTE">
+                  <p>MONTE</p>
                 </div>
               </div>
             </div>
@@ -289,12 +266,52 @@
             <div class="round">
               <div class="match">
                 <div class="equipe">
-                  <img src="medias/Teams/600px-9INE_2022_lightmode.png" alt="heroic">
+                  <img src="medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="VITALITY">
+                  <p>VITALITY</p>
                 </div>
                 <div class="divider">
                 </div>
                 <div class="equipe">
-                  <img src="medias/Teams/600px-G2_Esports_2019_darkmode.png" alt="500">
+                  <img src="medias/Teams/Astralis_logo.svg.png" alt="ast">
+                  <p>ASTRALIS</p>
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/ninjas-in-pyjamas-logo-0AD2295340-seeklogo.com.png" alt="nip">
+                  <p>NIP</p>
+                </div>
+                <div class="divider">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-Eternal_Fire_2022_allmode.png" alt="EF">
+                  <p>EF</p>
+                </div>
+              </div>
+            </div>
+            <div class="round">
+              <div class="matchSuivant">
+                <div class="equipe">TBD</div>
+              </div>
+            </div>  
+            <div class="round">
+              <div class="match">
+                <div class="equipe">
+                  <img src="medias/Teams/600px-9INE_2022_lightmode.png" alt="nine">
+                  <p>9INE</p>
+                </div>
+                <div class="divider">
+                </div>
+                <div class="equipe">
+                  <img src="medias/Teams/600px-G2_Esports_2019_darkmode.png" alt="g2">
+                  <p>G2</p>
                 </div>
               </div>
             </div>
@@ -308,95 +325,101 @@
         </div>
         
       </section>
-      <section class="matchRegionaux">
-        <div class="titreMatch">
-          <h3>Tous les tournois</h3>
-          <div class="boutonsMatch">
-            <button>Americas</button>
-            <button>EMEA</button>
-            <button>Asia</button>
-            <button>International</button>
-          </div>
-          <div class="matchsGeneral">
-            <div class="titresInterieurs">
-              <h3>À venir</h3>
+      <div class="divMatchsNouvelles">
+        <section class="matchRegionaux">
+          <div class="titreMatch">
+            <h3>Tous les tournois</h3>
+            <div class="boutonsMatch">
+              <button>Americas</button>
+              <button>EMEA</button>
+              <button>Asia</button>
+              <button>International</button>
             </div>
-            <div class="matchBloc">
-              <p>Mar 17 - 31</p><p>PGL Major Copenhagen 2024</p>
-            </div>
-            <div class="matchBloc">
-              <p>Jan 31 - Feb 11</p><p>IEM Katowice 2024</p>
-            </div>
-            <div class="matchBloc">
-              <p>Dec 13 - 17</p><p>BLAST Premier World Final</p>
-            </div>
-            <div class="titresInterieurs">
-              <h3>Actuel</h3>
-            </div>
-            <div class="matchBloc">
-              <p>Aôut 15 - Dec 10</p><p>ESL Challenger League</p>
-            </div>
-            <div class="titresInterieurs">
-              <h3>Passé</h3>
-            </div>
-            <div class="matchBloc">
-              <p>Oct 5 - Dec 10</p><p>ESL Challenger League</p>
-            </div>
-            <div class="matchBloc">
-              <p>Aôut - Dec 10</p><p>ESL Challenger League</p>
-            </div>
-            <div class="matchBloc">
-              <p>Dec 8 - 10</p><p>ESL Challenger League</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="nouvelles">
-        <div class="titreNouvelles">
-          <h3>Nouvelles</h3>
-          <div class="article">
-            <img src="medias/articles/Article1.jpg" alt="article1">
-            <div class="texteArticle">
-              <p>S1mple, le meilleure joeur de l'actualité</p>
-              <p>Article</p>
+            <div class="matchsGeneral">
+              <div class="titresInterieurs">
+                <h3>À venir</h3>
+              </div>
+              <div class="matchBloc">
+                <p>Mar 17 - 31</p><p>PGL Major Copenhagen 2024</p>
+              </div>
+              <div class="matchBloc">
+                <p>Jan 31 - Feb 11</p><p>IEM Katowice 2024</p>
+              </div>
+              <div class="matchBloc">
+                <p>Dec 13 - 17</p><p>BLAST Premier World Final</p>
+              </div>
+              <div class="titresInterieurs">
+                <h3>Actuel</h3>
+              </div>
+              <div class="matchBloc">
+                <p>Aôut 15 - Dec 10</p><p>ESL Challenger League</p>
+              </div>
+              <div class="titresInterieurs">
+                <h3>Passé</h3>
+              </div>
+              <div class="matchBloc">
+                <p>Oct 5 - Dec 10</p><p>ESL Challenger League</p>
+              </div>
+              <div class="matchBloc">
+                <p>Aôut - Dec 10</p><p>ESL Challenger League</p>
+              </div>
+              <div class="matchBloc">
+                <p>Dec 8 - 10</p><p>ESL Challenger League</p>
+              </div>
             </div>
           </div>
-          <div class="article">
-            <img src="medias/articles/Article2.jpg" alt="article2">
-            <div class="texteArticle">
-              <p>Quelle est la meilleure équipe de 2023 ?</p>
-              <p>Article</p>
+        </section>
+        <section class="nouvelles">
+          <div class="titreNouvelles">
+            <h3>Nouvelles</h3>
+            <div class="article">
+              <img src="medias/articles/Article1.jpg" alt="article1">
+              <div class="texteArticle">
+                <p>S1mple, le meilleure joeur de l'actualité</p>
+                <p>Article</p>
+              </div>
             </div>
-          </div>
-          <div class="article">
-            <img src="medias/articles/Article3.jpg" alt="article3">
-            <div class="texteArticle">
-              <p>L'opinion d pros sur Counter-Strike 2</p>
-              <p>Article</p>
+            <div class="article">
+              <img src="medias/articles/Article2.jpg" alt="article2">
+              <div class="texteArticle">
+                <p>Quelle est la meilleure équipe de 2023 ?</p>
+                <p>Article</p>
+              </div>
             </div>
-          </div>
-      </section>
+            <div class="article">
+              <img src="medias/articles/Article3.jpg" alt="article3">
+              <div class="texteArticle">
+                <p>L'opinion d pros sur Counter-Strike 2</p>
+                <p>Article</p>
+              </div>
+            </div>
+        </section>
+      </div>
     </main>
     <footer class="footerPrincipal">
-      <a href="index.html"><img src="medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
-      <div id="reseauxSociauxHaut">
-        <img src="medias/reseauxSociaux/discord.svg" alt="Discord">
-        <img src="medias/reseauxSociaux/x-twitter.svg" alt="twitter">
-        <img src="medias/reseauxSociaux/facebook.svg" alt="Facebook">
-        <img src="medias/reseauxSociaux/instagram.svg" alt="Insta">
+      <div class="iconesFooter">
+        <a href="index.html"><img src="medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
+        <div id="reseauxSociauxHaut">
+          <img src="medias/reseauxSociaux/discord.svg" alt="Discord">
+          <img src="medias/reseauxSociaux/x-twitter.svg" alt="twitter">
+          <img src="medias/reseauxSociaux/facebook.svg" alt="Facebook">
+          <img src="medias/reseauxSociaux/instagram.svg" alt="Insta">
+        </div>
+        <div id="reseauxSociauxBas">
+          <img src="medias/reseauxSociaux/youtube.svg" alt="youtube">
+          <img src="medias/reseauxSociaux/twitch.svg" alt="Twitch">
+          <img src="medias/reseauxSociaux/github.svg" alt="GIT">
+          <img src="medias/reseauxSociaux/linkedin.svg" alt="linkedin">
+        </div>
       </div>
-      <div id="reseauxSociauxBas">
-        <img src="medias/reseauxSociaux/youtube.svg" alt="youtube">
-        <img src="medias/reseauxSociaux/twitch.svg" alt="Twitch">
-        <img src="medias/reseauxSociaux/github.svg" alt="GIT">
-        <img src="medias/reseauxSociaux/linkedin.svg" alt="linkedin">
+      <div class="texteFooter">
+        <h3>Contactez-Nous</h3>
+        <p>Chat avec nous</p>
+        <h3>À propos de</h3>
+        <p>Politique de confidentialité</p>
+        <p>API</p>
+        <p>Avertissement</p>
       </div>
-      <h3>Contactez-Nous</h3>
-      <p>Chat avec nous</p>
-      <h3>À propos de</h3>
-      <p>Politique de confidentialité</p>
-      <p>API</p>
-      <p>Avertissement</p>
     </footer>
 </body>
 <script src="js/barre-nav.js"></script>
