Avant dernier commit Julian

--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -24,7 +24,7 @@
                 </span>
                 <ul>
                   <li><a href="equipes.html">Les meilleures équipes</a></li>
-                  <li><a href="#">Les meilleures joueurs</a></li>
+                  <li><a href="joueurs.html">Les meilleures joueurs</a></li>
                 </ul>
               </li>
               <li>Matchs et tournois<span class="material-symbols-outlined" id="fleche">
