--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </span>
               <ul>
                 <li><a href="pages/equipes.html">Les meilleures équipes</a></li>
-                <li><a href="#">Les meilleures joueurs</a></li>
+                <li><a href="pages/joueurs.html">Les meilleures joueurs</a></li>
               </ul>
             </li>
             <li>Matchs et tournois<span class="material-symbols-outlined" id="fleche">
