--- a/pages/equipes.html
+++ b/pages/equipes.html
@@ -90,7 +90,7 @@
                   <img id="equipe" src="../medias/Teams/600px-Eternal_Fire_2022_allmode.png" alt="">
                   <h2 class="hoverNomEquipe"><a href="pageEquipe.html">ETERNAL FIRE</a></h2>
               </div>
-            </section>        
+            </section> 
             <footer class="footerPrincipal">
               <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
               <div id="reseauxSociauxHaut">
@@ -103,7 +103,7 @@
                 <img src="../medias/reseauxSociaux/youtube.svg" alt="youtube">
                 <img src="../medias/reseauxSociaux/twitch.svg" alt="Twitch">
                 <img src="../medias/reseauxSociaux/github.svg" alt="GIT">
-                <img src="../css/" alt="linkedin">
+                <img src="../medias/reseauxSociaux/linkedin.svg" alt="linkedin">
               </div>
               <h3>Contactez-Nous</h3>
               <p>Chat avec nous</p>
@@ -111,7 +111,8 @@
               <p>Politique de confidentialité</p>
               <p>API</p>
               <p>Avertissement</p>
-            </footer>
+            </footer>       
+            
 </body>
 <script src="../js/barre-nav.js"></script>
 </html>
