--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -46,9 +46,11 @@
               </li>
             </ul>
           </nav>
-          <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpedia" ></a>
+          <a href="../index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpedia" ></a>
         </div>
       </header>
+
+      <section class="grpJoueur">
     <div id="joueur">
         <img id="joueurs" src="../medias/joueur/no-team-flamez-photo.avif" alt="flamez">
         <img id="joueurs" src="../medias/joueur/no-team-magisk-photo.avif" alt="magisk">
@@ -56,30 +58,148 @@
         <img id="joueurs" src="../medias/joueur/no-team-zywoo-photo.avif" alt="zywoo">
         <img id="joueurs" src="../medias/joueur/vitality-apex-photo.avif" alt="apex">
     </div>
-    <section class="infoMatch">
-        <div class="tableauMatch"></div>
-    </section>
-    <footer class="footerPrincipal">
-      <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
-      <div id="reseauxSociauxHaut">
-        <img src="../medias/reseauxSociaux/discord.svg" alt="Discord">
-        <img src="../medias/reseauxSociaux/x-twitter.svg" alt="twitter">
-        <img src="../medias/reseauxSociaux/facebook.svg" alt="Facebook">
-        <img src="../medias/reseauxSociaux/instagram.svg" alt="Insta">
+  </section>
+
+    <section class="infoEquipe">
+      <div class="tableauEquipe">
+        <p id="nomJ">flamez</p>
+        <p id="nomJ">magisk</p>
+        <p id="nomJ">spinx</p>
+        <p id="nomJ">zywoo</p>
+        <p id="nomJ">apex</p>
       </div>
-      <div id="reseauxSociauxBas">        
-        <img src="../medias/reseauxSociaux/youtube.svg" alt="youtube">
-        <img src="../medias/reseauxSociaux/twitch.svg" alt="Twitch">
-        <img src="../medias/reseauxSociaux/github.svg" alt="GIT">
-        <img src="../css/" alt="linkedin">
+  </section>
+  <section class="infoMatch">
+    <div class="tableauMatch">
+      <div class="tableau2"><h3>Résulat recent d'équipe</h3></div>
+      <div class="Matchs"><h4>ESL ONE COLOGNE</h4>
+        <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+        <h4>2:1</h4>
+        <img id="equipe" src="../medias/Teams/600px-Heroic_2023.png" alt=""><h3>2022/11/10</h3>
       </div>
-      <h3>Contactez-Nous</h3>
-      <p>Chat avec nous</p>
-      <h3>À propos de</h3>
-      <p>Politique de confidentialité</p>
-      <p>API</p>
-      <p>Avertissement</p>
-    </footer>
+
+        <div class="Matchs"><h4>ESL ONE COLOGNE</h4>
+          <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+          <h4>1:0</h4>
+          <img id="equipe" src="../medias/Teams/600px-Cloud9_2023_full_allmode.png" alt=""><h3>2022/11/25</h3>
+        </div>
+          
+          <div class="Matchs"><h4>ESL ONE COLOGNE</h4>
+            <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+            <h4>2:0</h4>
+            <img id="equipe" src="../medias/Teams/600px-9INE_2022_lightmode.png" alt=""><h3>2022/12/01</h3>
+          </div>
+
+            <div class="Matchs"><h4>ESL ONE COLOGNE</h4>
+              <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+              <h4>2:1</h4>
+              <img id="equipe" src="../medias/Teams/600px-G2_Esports_2019_darkmode.png" alt=""><h3>2022/12/05</h3>
+            </div>
+
+            <div class="Matchs"><h4>ESL ONE COLOGNE</h4>
+              <img id="equipe" src="../medias/Teams/600px-Team_Vitality_2023_lightmode.png" alt="">
+              <h4>1:0</h4>
+              <img id="equipe" src="../medias/Teams/ninjas-in-pyjamas-logo-0AD2295340-seeklogo.com.png" alt=""><h3>2022/12/15</h3>
+            </div>
+    </div>
+</section>
+  <section class="conteneurJoueur">
+    <img id="j1" src="../medias/joueur/no-team-flamez-photo.avif" alt="flamez">
+      <main class="infoJoueur">
+        <div class="tableauJoueur">
+          <div class="tableau3">
+          <h4>Flamez<h4>
+          <h4>MEMBRE DEPUIS 2020</h4>
+        </div>
+        <h5>Degat par ronde: 0.75</h5>
+        <h5>pourcentage de tire à la tete: 25%</h5>
+        <h5>Elimination Par ronde : 1kill/ronde5</h5>
+
+      </div>
+      </main>
+      </section>
+
+      <section class="conteneurJoueur">
+        <img id="j1" src="../medias/joueur/no-team-magisk-photo.avif" alt="magisk">
+          <main class="infoJoueur">
+            <div class="tableauJoueur">
+              <div class="tableau3">
+              <h4>Magisk<h4>
+              <h4>MEMBRE DEPUIS 2019</h4>
+            </div>
+            <h5>Degat par ronde: 1.25</h5>
+            <h5>pourcentage de tire à la tete: 19%</h5>
+            <h5>Elimination Par ronde : 0.75 kill/ronde</h5>
+          </div>
+          </main>
+          </section>
+
+          <section class="conteneurJoueur">
+            <img id="j1" src="../medias/joueur/no-team-spinx-photo.avif" alt="spinx">
+              <main class="infoJoueur">
+                <div class="tableauJoueur">
+                  <div class="tableau3">
+                  <h4>Spinx<h4>
+                  <h4>MEMBRE DEPUIS 2023</h4>
+                </div>
+                <h5>Degat par ronde: 1.10</h5>
+                <h5>pourcentage de tire à la tete: 20%</h5>
+                <h5>Elimination Par ronde : 0.25 kill/ronde</h5>
+              </div>
+              </main>
+              </section>
+
+              <section class="conteneurJoueur">
+                <img id="j1" src="../medias/joueur/no-team-zywoo-photo.avif" alt="zywoo">
+                  <main class="infoJoueur">
+                    <div class="tableauJoueur">
+                      <div class="tableau3">
+                      <h4>Zywoo<h4>
+                      <h4>MEMBRE DEPUIS 2019</h4>
+                    </div>
+                    <h5>Degat par ronde: 1.75</h5>
+                    <h5>pourcentage de tire à la tete: 36%</h5>
+                    <h5>Elimination Par ronde : 1.34 kill/ronde</h5>
+                  </div>
+                  </main>
+                  </section> 
+                  
+                  <section class="conteneurJoueur">
+                    <img id="j1" src="../medias/joueur/vitality-apex-photo.avif" alt="apex">
+                      <main class="infoJoueur">
+                        <div class="tableauJoueur">
+                          <div class="tableau3">
+                          <h4>Apex<h4>
+                          <h4>MEMBRE DEPUIS 2018</h4>
+                        </div>
+                        <h5>Degat par ronde: 0.35</h5>
+                        <h5>pourcentage de tire à la tete: 27%</h5>
+                        <h5>Elimination Par ronde : 0.35 kill/ronde</h5>
+                      </div>
+                      </main>
+                      </section>  
+
+      <footer class="footerPrincipal">
+        <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
+        <div id="reseauxSociauxHaut">
+          <img src="../medias/reseauxSociaux/discord.svg" alt="Discord">
+          <img src="../medias/reseauxSociaux/x-twitter.svg" alt="twitter">
+          <img src="../medias/reseauxSociaux/facebook.svg" alt="Facebook">
+          <img src="../medias/reseauxSociaux/instagram.svg" alt="Insta">
+        </div>
+        <div id="reseauxSociauxBas">        
+          <img src="../medias/reseauxSociaux/youtube.svg" alt="youtube">
+          <img src="../medias/reseauxSociaux/twitch.svg" alt="Twitch">
+          <img src="../medias/reseauxSociaux/github.svg" alt="GIT">
+          <img src="../medias/reseauxSociaux/linkedin.svg" alt="linkedin">
+        </div>
+        <h3>Contactez-Nous</h3>
+        <p>Chat avec nous</p>
+        <h3>À propos de</h3>
+        <p>Politique de confidentialité</p>
+        <p>API</p>
+        <p>Avertissement</p>
+      </footer>   
 </body>
 <script src="../js/barre-nav.js"></script>
 </html>
