footer  pageEquipe veut pas prendre la typo

--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -178,7 +178,7 @@
                       </div>
                       </main>
                       </section>  
-
+<!-- le footer veut pas prende la police for some reason -->
       <footer class="footerPrincipal">
         <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
         <div id="reseauxSociauxHaut">
