--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -62,11 +62,11 @@
 
     <section class="infoEquipe">
       <div class="tableauEquipe">
-        <p id="nomJ">flamez</p>
-        <p id="nomJ">magisk</p>
-        <p id="nomJ">spinx</p>
-        <p id="nomJ">zywoo</p>
-        <p id="nomJ">apex</p>
+        <h3 id="nomJ">flamez</h3>
+        <h3 id="nomJ">magisk</h3>
+        <h3 id="nomJ">spinx</h3>
+        <h3 id="nomJ">zywoo</h3>
+        <h3 id="nomJ">apex</h3>
       </div>
   </section>
   <section class="infoMatch">
@@ -177,29 +177,32 @@
                         <h5>Elimination Par ronde : 0.35 kill/ronde</h5>
                       </div>
                       </main>
-                      </section>  
-<!-- le footer veut pas prende la police for some reason -->
-      <footer class="footerPrincipal">
-        <a href="index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
-        <div id="reseauxSociauxHaut">
-          <img src="../medias/reseauxSociaux/discord.svg" alt="Discord">
-          <img src="../medias/reseauxSociaux/x-twitter.svg" alt="twitter">
-          <img src="../medias/reseauxSociaux/facebook.svg" alt="Facebook">
-          <img src="../medias/reseauxSociaux/instagram.svg" alt="Insta">
-        </div>
-        <div id="reseauxSociauxBas">        
-          <img src="../medias/reseauxSociaux/youtube.svg" alt="youtube">
-          <img src="../medias/reseauxSociaux/twitch.svg" alt="Twitch">
-          <img src="../medias/reseauxSociaux/github.svg" alt="GIT">
-          <img src="../medias/reseauxSociaux/linkedin.svg" alt="linkedin">
-        </div>
-        <h3>Contactez-Nous</h3>
-        <p>Chat avec nous</p>
-        <h3>À propos de</h3>
-        <p>Politique de confidentialité</p>
-        <p>API</p>
-        <p>Avertissement</p>
-      </footer>   
+                      </section>      
 </body>
+<footer class="footerPrincipal">
+  <div class="iconesFooter">
+    <a href="../index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
+    <div id="reseauxSociauxHaut">
+      <img src="../medias/reseauxSociaux/discord.svg" alt="Discord">
+      <img src="../medias/reseauxSociaux/x-twitter.svg" alt="twitter">
+      <img src="../medias/reseauxSociaux/facebook.svg" alt="Facebook">
+      <img src="../medias/reseauxSociaux/instagram.svg" alt="Insta">
+    </div>
+    <div id="reseauxSociauxBas">
+      <img src="../medias/reseauxSociaux/youtube.svg" alt="youtube">
+      <img src="../medias/reseauxSociaux/twitch.svg" alt="Twitch">
+      <img src="../medias/reseauxSociaux/github.svg" alt="GIT">
+      <img src="../medias/reseauxSociaux/linkedin.svg" alt="linkedin">
+    </div>
+  </div>
+  <div class="texteFooter">
+    <h3>Contactez-Nous</h3>
+    <p>Chat avec nous</p>
+    <h3>À propos de</h3>
+    <p>Politique de confidentialité</p>
+    <p>API</p>
+    <p>Avertissement</p>
+  </div>
+</footer>                
 <script src="../js/barre-nav.js"></script>
 </html>
