--- a/pages/equipes.html
+++ b/pages/equipes.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-          
+          <!-- TP FINALE PAGE MICHAEL ALI SOEU -->
         <nav class="navbar">
             <input type="checkbox" id="cc-nav">
             <div class="barre-nav">
