--- a/pages/pageEquipe.html
+++ b/pages/pageEquipe.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>equipe</title>
 </head>
+<!-- TP FINALE PAGE MICHAEL ALI SOEU -->
 <body>
     <header>
         <input type="checkbox" id="cc-nav">
