--- a/pages/joueurs.html
+++ b/pages/joueurs.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP3-3C1</title>
+    <!-- Normalize pour la page -->
   <link rel="stylesheet" href="../css/normalize.css">
+    <!-- Feuille de style pour la barre de navigation -->
   <link rel="stylesheet" href="../css/styleNAV-Footer.css">
+    <!-- Feuille de style pour la page -->
   <link rel="stylesheet" href="../css/joueurs.css">
+    <!-- Feuille de style pour les icones google -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+	<!-- Je vais pas copy paste le meme comentaire qui est dans le fichier index.html, je pense que tu comprends deja 😎 -->
   <header>
       <input type="checkbox" id="cc-nav">
       <div class="barre-nav">
@@ -55,9 +60,12 @@
   	<img src="../medias/logos/Counter-Strike_2-logo.png" alt="CS2" class="imageTitre">
 		<h2>Top 10 meilleures joueurs</h2>
   </main>
+  <!-- Okay ici c'est le table de toutes les joueurs  -->
 	<div class="tableJoueurs">
 		<table>
 				<tr>
+					<!-- Pour le titre de la table, il y a 6 categories, le rank du joueur, le data de tout le joueur,
+					le data de l'equipe, le HS %, le ADR et le KDA -->
 						<th>Rank</th>
 						<th>Joueur</th>
 						<th>Équipe</th>
@@ -66,6 +74,8 @@
 						<th>KDA</th>
 				</tr>
 				<tr>
+					<!-- Si on suivre la logique du tableau, on va mettre les informations de chaque joueur dans une ligne
+					TOUS les joeurs so organize de la meme facon la seule chose qui change c'est les informations -->
 						<td>1</td>
 						<td class="joueurInfo">
 								<img src="../medias/joueur/no-team-zywoo-photo.avif" alt="ZywOo">
@@ -227,6 +237,7 @@
 				</tr>
 		</table>
 	</div>
+		<!-- Je vais pas copy paste le meme comentaire qui est dans le fichier index.html, je pense que tu comprends deja 😎 -->
   <footer class="footerPrincipal">
       <div class="iconesFooter">
         <a href="../index.html"><img src="../medias/logos/liquipedia_logo_v2.png" alt="Liquidpedia" class="liquidpediaFooter" ></a>
